--- a/src/main/java/views/products/modular/ModularFlagView.form
+++ b/src/main/java/views/products/modular/ModularFlagView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="15" bottom="0" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="1214" height="466"/>
+      <xy x="20" y="20" width="1270" height="474"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -48,7 +48,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none" title="Metros de tela:"/>
+                <border type="none" title="Ancho:"/>
                 <children>
                   <component id="cac8f" class="javax.swing.JTextField" binding="widthTextField">
                     <constraints>
